Fix scrollbars on windows

--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,7 @@
 body {
   text-align: center;
   background: rgb(50, 50, 50);
+  overflow: hidden;
 }
 
 #background {
